# mercado-python

./: README.md
mercado_python/: mercado.py  pyproject.toml  teste.py
mercado_python/mercado_python/: produto.py
mercado_python/utils/: helper.py
